<resources>
    <!--    AIzaSyDWL4T8WERSHrXQ464jk8pKQf_0WLiDbgE-->
    <string name="app_name">Ghaier</string>
    <string name="map_api_key">AIzaSyC4l5QxL27z4w0uuD_5X3g0IRhaUdvb0Q4</string>
    <string name="map_key">AIzaSyC4l5QxL27z4w0uuD_5X3g0IRhaUdvb0Q4</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="field_req">Field required</string>
    <string name="login">Login</string>
    <string name="code">Code</string>
    <string name="user_phone">User Phone</string>
    <string name="are_you_have_account">Are You Have Account ?</string>
    <string name="upload_profile_photo">Upload Profile Photo</string>
    <string name="email">Email</string>
    <string name="accept">Accept</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="confirm">Confirm</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="logout">Logout</string>
    <string name="about_app">About App</string>
    <string name="notifications">Notifications</string>
    <string name="wait">Wait</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="field_required">Field Required</string>
    <string name="inv_email">Invalid Email</string>
    <string name="cannot_signup">Can Not Signup Without Accept Terms And Conditions</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="privacy">Privacy policy</string>
    <string name="upload_image">Upload image</string>
    <string name="select_image_to_upload">Select Image to Upload</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">Sign Up</string>
    <string name="failed">Failed</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ch_skill">Choose Skills</string>
    <string name="type_a_message">Type a message...</string>
    <string name="please_sign_in_or_sign_up">Please sign In or Sign Up</string>
    <string name="ok">Ok</string>
    <string name="skip">Skip</string>
    <string name="just_now">Just Now</string>
    <string name="a_minute_ago">a min ago</string>
    <string name="min">min</string>
    <string name="an_hour_ago">an hour ago</string>
    <string name="hs">h</string>
    <string name="yesterday">yesterday</string>
    <string name="video">Sent video message</string>
    <string name="voice">Sent voice message</string>
    <string name="image">Sent image</string>
    <string name="something">Check internet connection</string>
    <string name="invite">Invite</string>
    <string name="back">Back</string>
    <string name="refuse">Refuse</string>
    <string name="no_requests">No requests</string>
    <string name="req_refused">Your request refused</string>
    <string name="req_accepted">Your request accepted</string>
    <string name="no_conversation">No conversation</string>
    <string name="commission">Commission</string>
    <string name="shop_with_us">Shop with us</string>
    <string name="contact_us">Contact us</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="shop_now">Shop Now</string>
    <string name="auction">Auction</string>
    <string name="search">Search</string>
    <string name="user_name">User Name</string>
    <string name="city">City</string>
    <string name="country_code">Country Code</string>
    <string name="service_detials">Service Detials</string>
    <string name="order">Order</string>
    <string name="service">Service</string>
    <string name="service_provider">Service Provider</string>
    <string name="house_service">House Service</string>
    <string name="search2">Search...</string>
    <string name="services">Services</string>
    <string name="accessories">Accessories</string>
    <string name="spare_parts">Spare Parts</string>
    <string name="search_by_model">Search by model</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="details">Details</string>
    <string name="state">State</string>
    <string name="type">Type</string>
    <string name="country">Country</string>
    <string name="warranty">Warranty</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="owner">Owner</string>
    <string name="call">Call</string>
    <string name="location">Location</string>
    <string name="most_seller">Most Seller</string>
    <string name="registration_as_a_service_provider_or_agency_owner">Registration as a service provider or agency owner</string>
    <string name="same_service">Same Service</string>
    <string name="show_all">Show All</string>
    <string name="other_service">Other Service</string>
    <string name="rate_service_owner">Rate Service Owner</string>
    <string name="add_auction">Add Auction</string>
    <string name="arabic_title">Arabic Title</string>
    <string name="english_title">English Title</string>
    <string name="service_or_product">ٍService Or Product</string>
    <string name="model">Model</string>
    <string name="quantity">Quantity</string>
    <string name="brand">Brand</string>
    <string name="upload_photo_here">Upload Photo Here</string>
    <string name="news">New</string>
    <string name="used">Used</string>
    <string name="add">Add</string>
    <string name="open_price">Open Price</string>
    <string name="minimum">Minimum</string>
    <string name="auction_end_time">Auction End Time</string>
    <string name="current_price">Current Price</string>
    <string name="minimum_auction">minimum.auction</string>
    <string name="end_time">End Time</string>
    <string name="write_your_offer_here">ًWrite Your Offer Here</string>
    <string name="send_offer">Send Offer</string>
    <string name="the_seller">The seller</string>
    <string name="auction_detials">Auction Detials</string>
    <string name="order_cost">Order cost</string>
    <string name="total">Total</string>
    <string name="delivery">Delivery</string>
    <string name="payment">Payment</string>
    <string name="select">Select</string>
    <string name="personal_information">Personal information</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="select_location_on_map">Select location on map</string>
    <string name="building_no_street">Building no/street</string>
    <string name="purchases">Purchases</string>
    <string name="payment2">Payment</string>
    <string name="next">Next</string>
    <string name="ch_city">Choose city</string>
    <string name="choose">choose</string>
    <string name="subject">subject</string>
    <string name="message">message</string>
    <string name="send">Send</string>
    <string name="suc">Success</string>
    <string name="currency_type">pound</string>
    <string name="marks">Car Marks</string>
    <string name="second">Second</string>
    <string name="minute">Minute</string>
    <string name="hour">Hour</string>
    <string name="day">Day</string>
    <string name="rs">Ryal</string>
    <string name="untillnow">Untill Now</string>
    <string name="service_or_product_or_accessory">service or product or accessory</string>
    <string name="bid_now">Bid now</string>
    <string name="price">Price</string>
    <string name="bidit">Bid it yet</string>
    <string name="r_s">R.s</string>
    <string name="add_main_image">Add Main Image</string>
    <string name="same_adversiment">Same Adversiment</string>
    <string name="km">Km</string>

    <string name="all">All</string>
    <string name="direction">Direction</string>
    <string name="marketlocation">Service Center Location</string>
    <string name="ryal">Ryal</string>
    <string name="arabic_descripsion">Arabic Descripsion</string>
    <string name="english_descripsion">English Descripsion</string>
    <string name="current">Current</string>
    <string name="previous">Previous</string>
    <string name="type_message">Type Message</string>
    <string name="my_orders">My Orders</string>
    <string name="my_auction">My Auction</string>
    <string name="require">My Requires</string>
    <string name="status">Status</string>
    <string name="amount">Amout</string>
    <string name="new_order">Pending</string>
    <string name="in_way">Charged</string>
    <string name="accepted">Accepted</string>
    <string name="refused">Refused</string>
    <string name="completed">Completed</string>
    <string-array name="type_arrays">
        <item>service</item>
        <item>product</item>
        <item>accessory</item>
    </string-array>

</resources>