<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="lang"
            type="String" />

        <variable
            name="model"
            type="com.ghiar.models.AddOrderModel" />
        <variable
            name="userModel"
            type="com.ghiar.models.UserModel" />
        <variable
            name="showDialogListener"
            type="com.ghiar.interfaces.Listeners.ShowCountryDialogListener" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:fillViewport="true"
        android:background="@color/white"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                >
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_nav_user"
                    android:tint="@color/colorPrimary"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:text="@string/personal_information"
                    />

            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:singleLine="true"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColorHint="@color/gray6"
                android:hint="@string/name"
                android:background="@drawable/rounded_stroke_gray"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:text="@={model.name}"
                error="@{model.error_name}"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                >
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_call"
                    android:tint="@color/colorPrimary"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:text="@string/phone_number"
                    />



            </LinearLayout>


            <androidx.constraintlayout.widget.ConstraintLayout

                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_stroke_gray"
                android:padding="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"

                >


                <TextView
                    android:id="@+id/tv_code"
                    android:layout_width="wrap_content"
                    android:layout_height="37dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:hint="@string/code"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray4"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@={model.phone_code}"
                    />

                <View
                    android:id="@+id/view"
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/gray4"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_code"
                    app:layout_constraintTop_toTopOf="parent"

                    />

                <EditText
                    android:id="@+id/edt_phone"
                    android:layout_width="0dp"
                    android:layout_height="37dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/transparent"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray4"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/view2"
                    app:layout_constraintStart_toEndOf="@id/view"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@={model.phone}"
                    error="@{model.error_phone}"
                    />

                <View
                    android:id="@+id/view2"
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@color/gray4"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/image_phone_code"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/image_phone_code"
                    android:layout_width="40dp"
                    android:layout_height="37dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:onClick="@{()->showDialogListener.showDialog()}"
                    android:padding="12dp"
                    android:rotation='@{lang.equals("ar")?180:0}'
                    android:src="@drawable/ic_right_arrow"
                    android:tint="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                >
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_map"
                    android:tint="@color/colorPrimary"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:text="@string/address"
                    />



            </LinearLayout>

            <FrameLayout
                android:id="@+id/flLocation"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_primary"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:clickable="false"
                    android:longClickable="false"
                    >
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_left_arrow"
                        android:tint="@color/white"
                        android:rotation='@{lang.equals("ar")?180:0}'
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:text="@string/select_location_on_map"
                        />
                </LinearLayout>
            </FrameLayout>

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:text="@{model.address}"
                error="@{model.error_address}"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:singleLine="true"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColorHint="@color/gray6"
                android:hint="@string/building_no_street"
                android:background="@drawable/rounded_stroke_gray"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:text="@={model.street}"
                />

        </LinearLayout>
    </ScrollView>

</layout>
