<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="auctionmodel"
            type="com.ghiar.models.SingleAuctionModel" />

        <variable
            name="lang"
            type="String" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">


        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/image"
            image="@{auctionmodel.main_image}"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_border_color="@color/colorPrimary"
            app:riv_border_width="1px"
            app:riv_corner_radius="10dp"

            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
     
                app:layout_constraintStart_toStartOf="parent">

                <FrameLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/small_rounded_whiteshape">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/second"
                            android:textColor="@color/register"
                            android:textSize="10sp" />

                        <TextView
                            android:id="@+id/tvseconed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@color/register" />
                    </LinearLayout>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/small_rounded_whiteshape">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/minute"
                            android:textColor="@color/register"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tvminute"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"

                            android:textColor="@color/register" />
                    </LinearLayout>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/small_rounded_whiteshape">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/hour"
                            android:textColor="@color/register"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tvhour"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"

                            android:textColor="@color/register" />
                    </LinearLayout>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/small_rounded_whiteshape">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/day"
                            android:textColor="@color/register"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tvday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"


                            android:textColor="@color/register" />
                    </LinearLayout>
                </FrameLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text='@{lang.equals("ar")?auctionmodel.title_ar:auctionmodel.title_en}'
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlCompat" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:gravity="center"

                android:text="@string/current_price"
                android:textColor="@color/register"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:gravity="center"

                android:text="@{auctionmodel.current}"
                android:textColor="@color/second"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/rs"
                android:textColor="@color/register"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text='@{@string/minimum+"."+@string/auction+auctionmodel.start_price+@string/rs}'
                android:textColor="@color/register"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text='@{auctionmodel.amount+@string/auction+@string/untillnow}'
                android:textColor="@color/register"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlCompat" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="3dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:gravity="center"

                android:text="@string/end_time"
                android:textColor="@color/register"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <TextView
                date="@{Long.parseLong(auctionmodel.end_date)}"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"

                android:gravity="center"
                android:textColor="@color/register"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

        </LinearLayout>
    </LinearLayout>
</layout>